# vinilla

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/vinilla-c/: main.c
examples/vinilla-rs/: Cargo.toml
examples/vinilla-rs/src/: main.rs
src/term/: mod.rs
src/term/grid/: mod.rs
tests/libvinilla/: main.c
vinilla-lib/: Cargo.toml  build.rs  cbindgen.toml  libvinilla.h
vinilla-lib/src/: color.rs  lib.rs  libvinilla.rs  processor.rs
vinilla-term/: Cargo.toml
vinilla-term/src/: cell.rs  lib.rs  term.rs
vinilla-term/src/grid/: mod.rs  row.rs  storage.rs
