[package]
name = "vinilla-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vinilla-term = { path = "../vinilla-term" }
vte = { version = "0.11.1", features = ["ansi"] }

[profile.release]
lto = "thin"
opt-level = 'z'
