[package]
name = "vinilla-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
vinilla-term = { path = "../vinilla-term" }
vte = { version = "0.11.1", features = ["ansi"] }

[build-dependencies]
cbindgen = "0.26.0"

[profile.release]
lto = "thin"
opt-level = 'z'
